--- a/server/.env
+++ b/server/.env
@@ -7,4 +7,4 @@ NODE_ENV=development
 PORT=3001
 JWT_SECRET=universam205_secret_key_2024
 TELEGRAM_BOT_TOKEN=7971733334:AAGT04ooLaY-f0WZpeHW4frjCLOo6wpau0k
-TELEGRAM_CHAT_ID=5925365670
+TELEGRAM_CHAT_ID=5925365670, 5925365670, 702122191, 477097668
