--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DB_USER=postgres
 DB_PASSWORD=Gcc2020
 DB_HOST=localhost
 DB_PORT=5432
-NODE_ENV=development
+NODE_ENV=production
 PORT=3001
 JWT_SECRET=universam205_secret_key_2024
 TELEGRAM_BOT_TOKEN=7971733334:AAGT04ooLaY-f0WZpeHW4frjCLOo6wpau0k
