--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=http://localhost:3001/api
-VITE_PRODUCTION_API_URL=https://universam205inc-backend.onrender.com/api
+VITE_PRODUCTION_API_URL=https://universam205inc.ru/api
